# CLI_Cowork_Bridge

./: .clinerules  CHANGELOG.md  README.md  README_zh.md  ccb  install.ps1  install.sh  pyproject.toml  pytest.ini  refactor_optional.py  reproduce_macos_issue.py  test_macos_procfs.py
.github/workflows/: test.yml
archive/docs/: agent-first-provider-backends-migration-plan.md  agent-first-v2-architecture.md
claude_skills/all-plan/: README.md  SKILL.md
claude_skills/ask/: SKILL.md.powershell
codex_skills/all-plan/: README.md  SKILL.md
codex_skills/file-op/: SKILL.md
config/: agents-md-ccb.md  claude-md-ccb.md
docs/: ccbd-lifecycle-stability-plan.md  ccbd-startup-supervision-contract.md  claude-session-isolation-contract.md  final-target-agent-first-multi-mount.md  memory-first-agent-architecture.md
lib/: release_artifacts.py
lib/agents/: store.py  (+1 more)
test/: system_comm_matrix.sh  test_cli_management_update.py  test_cli_room.py  test_gemini_comm.py  test_imessage.py  test_imessage_dispatch.py  test_imessage_watcher.py  test_provider_finish_hook_script.py  test_provider_hook_settings.py  test_provider_instance_resolution.py  test_provider_profiles.py  test_room_cli.py  test_room_dispatcher.py  test_room_executor.py  test_room_imessage_delivery.py  test_room_parser.py  test_room_store.py  test_room_stream_executor.py  test_v2_cli_render.py  test_v2_daemon_startup_wait.py  test_v2_diagnostics_bundle.py  test_v2_execution_service.py  test_v2_provider_core_registry.py  test_v2_provider_restore_launchers.py  test_v2_runtime_launch.py  test_v2_start_foreground.py
(+727 files in other folders)
