[project]
name = "cli-bridge"
version = "7.2.0"
description = "CCB - Agent CLI Hub and Teams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tomli; python_version < '3.11'",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["lib"]
testpaths = ["my_test", "test"]
